# kmriiwa_ros_stack

./: .gitignore  .travis.yml  README.md
.travis/: ci.sh  dep.repos
kmriiwa_bringup/: CMakeLists.txt  package.xml
kmriiwa_bringup/launch/: kmriiwa_bringup.launch  laserscan_merge.launch  planning_stack_bringup.launch
kmriiwa_control/: CMakeLists.txt  package.xml
kmriiwa_control/config/: iiwa_control.yaml
kmriiwa_control/launch/: kmriiwa_control.launch
kmriiwa_description/: CMakeLists.txt  package.xml
kmriiwa_description/launch/: kmriiwa_upload.launch
kmriiwa_description/urdf/: kmriiwa.urdf.xacro
kmriiwa_description/urdf/iiwa14/: iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa14.xacro  materials.xacro
kmriiwa_description/urdf/kmp200/: kmp200 (copy).xacro  kmp200.gazebo.xacro  kmp200.xacro
kmriiwa_description/urdf/robot/: empty.xacro  kmriiwa.urdf.xacro
kmriiwa_gazebo/: CMakeLists.txt  package.xml
kmriiwa_gazebo/config/: gazebo_iiwa_control.yaml
kmriiwa_gazebo/launch/: kmriiwa_empty_world.launch  kmriiwa_test_zone.launch  multi_kmriiwa_test_zone.launch
kmriiwa_gazebo/launch/includes/: kmriiwa_gazebo_control.launch  robot.launch.xml
kmriiwa_gazebo/src/: kmriiwa_plugin.cpp
kmriiwa_gazebo/worlds/: empty.world
kmriiwa_moveit/: .setup_assistant  CMakeLists.txt  package.xml
kmriiwa_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kmriiwa.srdf  kmriiwa.srdf.xacro  ompl_planning.yaml  ros_controllers.yaml
kmriiwa_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kmriiwa_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kmriiwa_msgs/: CMakeLists.txt  package.xml
kmriiwa_msgs/msg/: JointPosition.msg  KMRStatus.msg  LBRStatus.msg
kmriiwa_navigation/: CMakeLists.txt  package.xml
kmriiwa_navigation/config/: common_costmap.yaml  global_costmap.yaml  global_costmap_laser.yaml  global_costmap_static_map.yaml  gmapping.yaml  local_costmap.yaml  local_planner.yaml
kmriiwa_navigation/launch/: amcl.launch  gmapping.launch  laserscan_merge.launch  map_navigation.launch  mapless_navigation.launch  move_base.launch
kmriiwa_navigation/maps/: ACL_left_bank.pgm  ACL_left_bank.yaml  dryLab.pgm  dryLab.yaml  test_zone.pgm  test_zone.yaml
kmriiwa_vis/: CMakeLists.txt  package.xml
kmriiwa_vis/launch/: moveit_view.launch  navigation_moveit_view.launch  navigation_view.launch  view_model.launch  view_robot.launch
kmriiwa_vis/rviz/: map_navigation.rviz  map_navigation_moveit.rviz  mapless_navigation.rviz  mapless_navigation_moveit.rviz  model.rviz  moveit.rviz  navigation.rviz  robot.rviz
