<?xml version="1.0"?>
<package format="2">
  <name>kmriiwa_gazebo</name>
  <version>0.0.0</version>
  <description>The kmriiwa_gazebo package</description>
  <author email="hatem.fakhruldeen@gmail.com">stoic-roboticist</author>
  <maintainer email="hatem.fakhruldeen@gmail.com">stoic-roboticist</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
