<?xml version="1.0"?>
<package format="2">
  <name>kmriiwa_msgs</name>
  <version>0.1.0</version>
  <description>The kmriiwa_msgs package</description>

  <author email="hatem.fakhruldeen@gmail.com">stoic-roboticist</author>
  <maintainer email="hatem.fakhruldeen@gmail.com">stoic-roboticist</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  
</package>
