<?xml version="1.0"?>
<package format="2">
  <name>kmriiwa_navigation</name>
  <version>0.0.0</version>
  <description>The kmriiwa_navigation package</description>
  <author email="hatem.fakhruldeen@gmail.com">stoic-roboticist</author>
  <maintainer email="hatem.fakhruldeen@gmail.com">stoic-roboticist</maintainer>
  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>

</package>
