<?xml version="1.0"?>
<package format="2">
  <name>kmriiwa_vis</name>
  <version>0.0.0</version>
  <description>The kmriiwa_vis package</description>
  <author email="hatem.fakhruldeen@gmail.com">Hatem Fakhruldeen</author>
  <maintainer email="hatem.fakhruldeen@gmail.com">Hatem Fakhruldeen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslaunch</build_depend>

  <exec_depend>kmriiwa_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
